[tool.poetry]
name = "fmpsdk"
version = "20240711"
description = ""
authors = ["Dax Mickelson <github@daxm.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "*"
requests = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
