[tool.poetry]
name = "fmpsdk"
version = "20250102.0"
description = ""
authors = ["Dax Mickelson <github@daxm.net>"]
readme = "README.md"
license = "BSD-3-Clause"

[tool.poetry.dependencies]
python = "*"
python-dotenv = "*"
requests = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
